--- a/globular-cluster/ReadMe
+++ b/globular-cluster/ReadMe
@@ -11,7 +11,7 @@ Abundance and kinematics of dwarfs to estimate halo mass of dwarfs.  Can it work
   
 1(a) and 1(b) are coupled, tied together by globular cluster mass function.  The shape of the globular cluster mass function (normed) is not a strong function of halo mass, a fact which has meant that it gets used as a distance indicator (https://ned.ipac.caltech.edu/level5/Sept13/Kissler/Kissler7.html#7.1).
 Answers to 1(a):
-  -Mild trend with halo mass: http://adsabs.harvard.edu/abs/2017ApJ...836...67H (Harris et al. 2017).
+  -Mild trend with halo mass: http://adsabs.harvard.edu/abs/2017ApJ...836...67H (Harris et al. 2017).  What I need to check: definition of halo mass.
 Answers to 1(b):
   -Hudson et al: http://iopscience.iop.org/article/10.1088/2041-8205/787/1/L5/pdf
   The ratio of the total stellar mass in globulars to halo mass is 4x10-5 with 0.2 dex scatter
