--- a/globular-cluster/ReadMe
+++ b/globular-cluster/ReadMe
@@ -18,6 +18,7 @@ Answers to 1(b):
   -Harris et al: http://adsabs.harvard.edu/abs/2017ApJ...836...67H
   Amplifies previous paper result, although with a slightly lower ratio of GC stellar mass to halo mass.
   -Mike B-K paper: http://adsabs.harvard.edu/abs/2017MNRAS.472.3120B see section 5.
+  -SLUGGS survey: http://iopscience.iop.org/article/10.3847/1538-3881/153/3/114/pdf
   So: maybe? we can get a noisy-ish measurement of LMC-mass halos.  It will be hard to push down, will be at the <N> ~ 1 limit below.
 Answers to 1(c):
   -
