--- a/globular-cluster/ReadMe
+++ b/globular-cluster/ReadMe
@@ -21,4 +21,5 @@ Answers to 1(b):
   -SLUGGS survey: http://iopscience.iop.org/article/10.3847/1538-3881/153/3/114/pdf
   So: maybe? we can get a noisy-ish measurement of LMC-mass halos.  It will be hard to push down, will be at the <N> ~ 1 limit below.
 Answers to 1(c):
-  -
+  -For early-type systems, the half-light radius of the globular cluster systems correlates with the virial radius of the host. 
+    Hudson & Robison: https://arxiv.org/pdf/1707.02609.pdf
