--- a/globular-cluster/ReadMe
+++ b/globular-cluster/ReadMe
@@ -23,3 +23,8 @@ Answers to 1(b):
 Answers to 1(c):
   -For early-type systems, the half-light radius of the globular cluster systems correlates with the virial radius of the host. 
     Hudson & Robison: https://arxiv.org/pdf/1707.02609.pdf
+    The bad news for dwarf-y scales is that the typical half-light rad for globulars is around a kpc, which is not very far into the halo. (connects to kinematics)
+
+Answers to 2(a):
+
+Answers to 2(b):
