--- a/globular-cluster/ReadMe
+++ b/globular-cluster/ReadMe
@@ -24,6 +24,7 @@ Answers to 1(c):
   -For early-type systems, the half-light radius of the globular cluster systems correlates with the virial radius of the host. 
     Hudson & Robison: https://arxiv.org/pdf/1707.02609.pdf
     The bad news for dwarf-y scales is that the typical half-light rad for globulars is around a kpc, which is not very far into the halo. (connects to kinematics)
+    On the other hand, if you had A LOT of hosts, you might be able to push further out in the halo by stacking.
 
 Answers to 2(a):
 
