--- a/globular-cluster/ReadMe
+++ b/globular-cluster/ReadMe
@@ -27,5 +27,6 @@ Answers to 1(c):
     On the other hand, if you had A LOT of hosts, you might be able to push further out in the halo by stacking.
 
 Answers to 2(a):
+  -Jay Strader's contribution to the LSST Science Book (sec. 7.11): https://www.lsst.org/sites/default/files/docs/sciencebook/SB_7.pdf
 
 Answers to 2(b):
