--- a/globular-cluster/ReadMe
+++ b/globular-cluster/ReadMe
@@ -28,5 +28,6 @@ Answers to 1(c):
 
 Answers to 2(a):
   -Jay Strader's contribution to the LSST Science Book (sec. 7.11): https://www.lsst.org/sites/default/files/docs/sciencebook/SB_7.pdf
+   Every globular within 30 Mpc.  Is it tractable to get spectro follow-up? (-7 abs mag is 23rd mag at 10 Mpc.)
 
 Answers to 2(b):
